# tagrs

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: release.yml
src/: collection.rs  jellyfin_api.rs  lib.rs  main.rs  templates.rs
src/static/: main.css
